# pasta_cpu_parallel

./: CMakeLists.txt  README.md
benchmarks/: README.md  ac97_ctrl.txt  aes_core.txt  c1355.txt  c17.txt  c1908.txt  c2670.txt  c3540.txt  c432.txt  c499.txt  c5315.txt  c6288.txt  c7522.txt  c880.txt  s1196.txt  s1494.txt  s27.txt  s344.txt  s349.txt  s400.txt  s510.txt  simple.txt  usb_phy_ispd.txt  wb_dma.txt
examples/: CMakeLists.txt  manual.cpp  run.cpp  simple.cpp
pasta/: CMakeLists.txt  pasta.cpp  pasta.hpp
unittests/: CMakeLists.txt  check_cycles.cpp  check_ops.cpp
