cmake_minimum_required(VERSION 3.8)
project(PASTA VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)

#set compilation flags
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "Setting build type to Release ")
  set(
    CMAKE_BUILD_TYPE Release
    CACHE
    STRING "Choose the type of build"
    FORCE
  )
  # Set the possible values of build type for cmake-gui
  set_property(
    CACHE
    CMAKE_BUILD_TYPE
    PROPERTY STRINGS
    "Debug" "Release" "MinSizeRel" "RelWithDebInfo"
  )
endif()

set(CMAKE_VERBOSE_MAKEFILE ON)

set(PASTA_3RD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rd-party)
set(PASTA_EXAMPLE_DIR ${PROJECT_SOURCE_DIR}/examples)


# -----------------------------------------------------------------------------
# must-have package include
# -----------------------------------------------------------------------------
include(CheckLanguage)

# Enable test
include(CTest)
set(CMAKE_CTEST_ARGUMENTS "--output-on-failure")

add_subdirectory(pasta)
add_subdirectory(examples)
add_subdirectory(unittests)



